AI Assistant Integration, Spotlight Section Fix

--- a/index.html
+++ b/index.html
@@ -20,6 +20,19 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+        var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+        (function () {
+            var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+            s1.async = true;
+            s1.src = 'https://embed.tawk.to/6936f97453238d197eae491d/1jbvbss4r';
+            s1.charset = 'UTF-8';
+            s1.setAttribute('crossorigin', '*');
+            s0.parentNode.insertBefore(s1, s0);
+        })();
+    </script>
+    <!--End of Tawk.to Script-->
 </head>
 
 <body data-bs-spy="scroll" data-bs-target="#main-nav" data-bs-offset="50">
@@ -175,30 +188,82 @@
     <section id="linkedin" class="section py-5 bg-light-grey">
         <div class="container">
             <h2 class="section-title poppins-font text-center mb-5">🔦 In the Spotlight</h2>
-            <div id="linkedin-slider" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active align-items-center">
 
+            <div id="linkedin-slider" class="carousel slide" data-bs-interval="false">
+                <div class="carousel-inner">
+
+                    <div class="carousel-item text-center active">
+                        <div class="row justify-content-center">
+                            <div class="col-12 col-md-8 col-lg-6">
+                                <div class="card spotlight-card photo-post p-4 bg-white shadow-sm my-5 text-center">
+                                    <div class="card-body">
+                                        <h5 class="poppins-font text-charcoal fw-bold card-title">Presentation at ASE
+                                            2025</h5>
+                                        <p class="text-muted small card-text">
+                                            I had the opportunity to visit Seoul, South Korea to attend 40th Edition of
+                                            the
+                                            International Conference on Automated Software Engineering (ASE 2025), one
+                                            of
+                                            the most prestigious and top-tier venues in the software engineering world.
+                                        </p>
+                                        <a
+                                            href="https://www.linkedin.com/posts/jaygandhi129_ase2025-automatedsoftwareengineering-softwareengineering-activity-7398788153681104896-6nHv?utm_source=share&utm_medium=member_desktop&rcm=ACoAADASTkABz2K8yLWIAJDCN0s67L5-GhYTUnQ" target="_blank">
+                                            <img src="./images/post/ase-post.png" class="card-img-bottom" alt="...">
+                                        </a>
+                                        <div class="container">
+                                            <a href="https://www.linkedin.com/posts/jaygandhi129_ase2025-automatedsoftwareengineering-softwareengineering-activity-7398788153681104896-6nHv?utm_source=share&utm_medium=member_desktop&rcm=ACoAADASTkABz2K8yLWIAJDCN0s67L5-GhYTUnQ"
+                                                class="btn primary-btn btn-sm mt-3" target="_blank">View on LinkedIn</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="carousel-item text-center">
+                        <div class="row justify-content-center">
+                            <div class="col-12 col-md-8 col-lg-6">
+                                <div class="card spotlight-card photo-post p-4 bg-white shadow-sm my-5 text-center">
+                                    <div class="card-body">
+                                        <h5 class="poppins-font text-charcoal fw-bold card-title">Presentation at ISEC
+                                            2025</h5>
+                                        <p class="text-muted small card-text">
+                                            I am grateful for the incredible opportunity to present my research paper, "Domain Aligned Microservices Decomposition", at the 18th edition of Innovations in Software Engineering (ISEC) held at NIT Kurukshetra!🚀 
+                                        </p>
+                                        <a
+                                            href="https://www.linkedin.com/posts/jaygandhi129_research-innovation-isec-activity-7304490279594549248-QbWk?utm_source=share&utm_medium=member_desktop&rcm=ACoAADASTkABz2K8yLWIAJDCN0s67L5-GhYTUnQ" target="_blank">
+                                            <img src="./images/post/isec-post.png" class="card-img-bottom" alt="...">
+                                        </a>
+                                        <div class="container">
+                                            <a href="https://www.linkedin.com/posts/jaygandhi129_research-innovation-isec-activity-7304490279594549248-QbWk?utm_source=share&utm_medium=member_desktop&rcm=ACoAADASTkABz2K8yLWIAJDCN0s67L5-GhYTUnQ"
+                                                class="btn primary-btn btn-sm mt-3" target="_blank">View on LinkedIn</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="carousel-item text-center">
                         <iframe
                             src="https://www.linkedin.com/embed/feed/update/urn:li:share:7355650818848473088?collapsed=1"
-                            height="612" width="504" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
-
+                            height="612" width="504" frameborder="0" allowfullscreen="" title="Embedded post"
+                            class="mx-auto my-5 embed-responsive-item">
+                        </iframe>
                     </div>
 
-                    <div class="carousel-item ">
+                    <div class="carousel-item text-center">
                         <iframe
                             src="https://www.linkedin.com/embed/feed/update/urn:li:share:7348938575683403777?collapsed=1"
-                            height="669" width="504" frameborder="0" allowfullscreen="" title="Embedded post"></iframe>
+                            height="669" width="504" frameborder="0" allowfullscreen="" title="Embedded post"
+                            class="mx-auto my-5 embed-responsive-item">
+                        </iframe>
+                    </div>
 
-                    </div>
-                    <div class="carousel-item">
-                        <blockquote class="linkedin-embed p-4 bg-white shadow-sm mx-auto my-5 text-center">
-                            <p class="lead">Deep dive into Spring Boot 3.0 virtual threads for microservices...</p>
-                            <a href="[Your Post Link 2]" target="_blank" class="text-charcoal fw-bold">View on LinkedIn
-                                <i class="fab fa-linkedin"></i></a>
-                        </blockquote>
-                    </div>
+                    
+
                 </div>
+
                 <button class="carousel-control-prev" type="button" data-bs-target="#linkedin-slider"
                     data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
